Bug 240903. Add image input to the list of elements that can't be dragged. r+sr=roc, patch by Serge Gautherie